--- a/pa2/src/main/webapp/style.css
+++ b/pa2/src/main/webapp/style.css
@@ -516,17 +516,10 @@ input[type=submit] {
 }
 
 .star-widget input:not(:checked) ~ label:hover,
-input:not(:checked) ~ label:hover ~ label{
+input:not(:checked) ~ label:hover ~ label.star{
     color: rgb(47, 244, 93);
 }
 
-.star-widget input:checked ~ label{
+.star-widget input:checked ~ label.star{
     color: rgb(47, 244, 93);
-}
-
-/* Have you tried pain and suffering today?*/
-
-.pcontainer {
-    column-width: 10em;
-    column-rule: 1px solid rgb(75, 70, 74);
 }
